# StructuredMesh

./: CMakeLists.txt  README.md  bridge.cpp  bridge.hpp  code.cpp  edge_collapse.cpp  edge_collapse.hpp  edge_collapse2.cpp  header.hpp  label.cpp  label.hpp  main.cpp  main_edge_collapse.cpp  path.cpp  raster.cpp  raster.hpp  timer.hpp
dataset/: README.md  bunny_pc_labeled.ply  fandisk_pc_labeled.ply
